# kindle_interactive

./: .gitlab-ci.yml  Cargo.toml  README.md  README.ru.md  index.html  styles.css
.github/workflows/: build.yml  release.yml
doc/: architecture.md  backend.md  clipboard_fix_explanation.md  frontend.md  logging.md  server.md
src/: app.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: clipboard.rs  commands.rs  core.rs  lib.rs  main.rs  network.rs  server.rs  state.rs  url_processor.rs
