[package]
name = "kindle-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kindle_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Application-specific dependencies
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
local-ip-address = "0.6"
sha1 = "0.10"
markdown = "1.0.0-alpha.16"

# Diagnostics
log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" } 


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = { version = "0.1", features = ["full"] }
