[package]
name = "kindle-interactive"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ki_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Application-specific dependencies
ammonia = "3.3.0"
arboard = "3.4.0"
axum = "0.7"
html2md = "0.2"
local-ip-address = "0.6"
markdown = "1.0.0-alpha.16"
readability = "0.3.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
sha1 = "0.10"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5", features = ["cors"] }
url = "2.5"

# Diagnostics
log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }


[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = { version = "0.1", features = ["full"] }
tauri = { version = "2", features = ["test"] }
